Securing rest API via spring security